--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <a href="#secondSection" class="icon-up-open-big"></a>
         </div>
       </section>
-      <section class="vertical-scrolling" style="background-image: linear-gradient(to bottom, #000000, #050404, #090808, #0d0c0c, #10100f);">
+      <section class="vertical-scrolling" style="background-image: linear-gradient(to bottom, #262624, #262623, #262623, #252522, #252522);">
         <h2>fullPage.js</h2>
         <h3>This is the second section</h3>
         <div class="scroll-icon">
@@ -84,8 +84,8 @@
         </div>
       </section>
       <section class="vertical-scrolling" style="background-image: linear-gradient(to bottom, #000000, #050404, #090808, #0d0c0c, #10100f);">
-        <span style="font-family: Google Spies; font-size: 40px;">Value Distribution,no middle<span style="font-family: Arial, Helvetica, sans-serif;">-</span>man,rights and ownership </span><br><br>
-        <P style="font-family: Google Spies; font-size: 40px;">to Everyone including</P><br>
+        <span style="font-family: Google Spies; font-size: 40px;">Value Distribution,no middle<span style="font-family: Arial, Helvetica, sans-serif;">-</span>man,rights and ownership to Everyone including</span><br><br>
+      
         <P style="font-family: the dark; font-size: 60px; color: whitesmoke;">Wacken Fans</P><br>
 
         <span style="font-family: Arial, Helvetica, sans-serif; font-weight: 600; font-size: 40px;">|</span><Br>
