--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.css" rel="stylesheet"> 
     <link href="css/main.css" rel="stylesheet">
     <link rel="preload" as="font" href="font/thedark.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="font/Google-spies.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="prefetch" as="font" href="font/Google-spies.woff2" type="font/woff2" crossorigin="anonymous">
 
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
+   
   </head>
   <body>
 
