--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,700' rel='stylesheet' type='text/css'>    
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.css" rel="stylesheet"> 
     <link href="css/main.css" rel="stylesheet">
-    <link rel="preload" as="font" href="font/thedark.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="prefetch" as="font" href="font/Google-spies.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="font/thedark.ttf" type="font/ttf" crossorigin="anonymous">
+    <link rel="prefetch" as="font" href="font/Google-spies.ttf" type="font/ttf" crossorigin="anonymous">
 
    
   </head>
