--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>An example showing how the fullPage.js jQuery plugin works</title>
+    <title>WACKEN 2019 BLOCKCHAIN</title>
 
     <!-- css files -->
     <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,700' rel='stylesheet' type='text/css'>    
